--- a/wiki/Cyprus.wikitext
+++ b/wiki/Cyprus.wikitext
@@ -1,50 +1,51 @@
-==[[English]]==
+==English==
 ===Proper noun===
 '''Cyprus'''
 
 # Country betweeen [[Europe]] and the [[Middle East]], in the [[Mediterranean Sea]]. Member state of the [[European Union]] since 2004. Official name: Republic of Cyprus.
-# Island between [[Europe]] and the [[Middle East]], in the [[Mediterranean Sea]].
+# Island between Europe and the Middle East, in the Mediterranean Sea.
 
 ===Translations===
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*'''[[Bosnian]]''': Kipar ''m'', Cipar ''m''
-*'''[[Breton]]''': [[Kiprenez]]
-*'''[[Bulgarian]]''': [[Кипър]]
-*'''[[Chinese]]''': [[塞浦路斯]] (Sāipǔlùsī)
-*'''[[Czech]]''': [[Kypr]]
-*'''[[Danish]]''': [[Cypern]]
-*'''[[Dutch]]''': Cyprus
-*'''[[Esperanto]]''': [[Kipro]]
-*'''[[Finnish]]''': [[Kypros]]
-*'''[[French]]''': [[Chypre]]
-*'''[[German]]''': [[Zypern]]
-*'''[[Greek]]''': [[Κύπρος]] ''f''
-*'''[[Hebrew]]''': [[קפריסין]] (Kaf'ri'sin)
-*'''[[Hungarian]]''': [[Ciprus]]
+*Bosnian: [[Kipar]] ''m'', [[Cipar]] ''m''
+*Breton: [[Kiprenez]]
+*Bulgarian: [[Кипър]]
+*Chinese: [[塞浦路斯]] (Sāipǔlùsī)
+*Czech: [[Kypr]]
+*Danish: [[Cypern]]
+*Dutch: Cyprus
+*[[Esperanto]]: [[Kipro]]
+*Finnish: [[Kypros]]
+*French: [[Chypre]]
+*German: [[Zypern]]
+*Greek: [[Κύπρος]] ''f''
+*Hebrew: [[קפריסין]] (Kaf'ri'sin)
+*Hungarian: [[Ciprus]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*'''[[Interlingua]]''': [[Cypro]]
-*'''[[Italian]]''': [[Cipro]]
-*'''[[Japanese]]''': [[キプロス]] (Kipurosu)
-*'''[[Polish]]''': [[Cypr]]
-*'''[[Portuguese]]''': [[Chipre]]
-*'''[[Romanian]]''': [[Cipru]] ''n''
-*'''[[Russian]]''': [[Кипр]]
-*'''[[Slovene]]''': [[Ciper]] ''m''
-*'''[[Spanish]]''': [[Chipre]]
-*'''[[Swedish]]''': [[Cypern]]
-*'''[[Turkish]]''': [[Kıbrıs]]
+*[[Interlingua]]: [[Cypro]]
+*Italian: [[Cipro]]
+*Japanese: [[キプロス]] (Kipurosu)
+*Polish: [[Cypr]]
+*Portuguese: [[Chipre]]
+*Romanian: [[Cipru]] ''n''
+*Russian: [[Кипр]]
+*Slovene: [[Ciper]] ''m''
+*Spanish: [[Chipre]]
+*Swedish: [[Cypern]]
+*Turkish: [[Kıbrıs]]
 |}
 |}
+
+===Related terms===
+*[[Cypriot]]
 
 ===See also===
-
-*[[Cypriot]]
 *[[Countries of the world]]
 
 [[hu:Cyprus]]
