--- a/wiki/sodio.wikitext
+++ b/wiki/sodio.wikitext
@@ -1,4 +1,21 @@
-== Spanish == {{wikipediaAlt|sodium}}
+==Italian==
+===Pronunciation===
+sòdio, /ˈsɔdjo/, /<tt>"sOdjo</tt>/
+===Noun===
+'''sodio'''
+
+# [[sodium]]
+
+===Related terms===
+*[[soda]]
+*[[sodare]]
+*[[sodico]]
+
+[[category:Italian elements]]
+
+----
+
+== Spanish ==
 === Noun ===
 '''sodio''' ''m''
 # [[sodium]]
