--- a/wiki/titanio.wikitext
+++ b/wiki/titanio.wikitext
@@ -1,4 +1,24 @@
-== Spanish == {{wikipediaAlt|titanium}}
+==Italian==
+===Pronunciation===
+titànio, /tiˈtanjo/, /<tt>ti"tanjo</tt>/
+===Adjective===
+'''titanio'''
+
+# [[Titanic]]
+
+===Noun===
+'''titanio''' ''m''
+
+# [[titanium]]
+
+===Related terms===
+*[[titanato]]
+*[[titanico]]
+*[[titano]]
+[[category:Italian elements]]
+
+----
+== Spanish ==
 === Noun ===
 '''titanio''' ''m''
 # [[titanium]]
