--- a/wiki/germanio.wikitext
+++ b/wiki/germanio.wikitext
@@ -1,4 +1,17 @@
-== Spanish == {{wikipediaAlt|germanium}}
+==Italian==
+===Pronunciation===
+germànio, /dʒerˈmanjo/, /<tt>dZer"manjo</tt>/
+===Noun===
+'''germanio''' ''m''
+
+# [[germanium]]
+
+===Related terms===
+*[[Germania]]
+
+[[category:Italian elements]]
+----
+== Spanish ==
 === Noun ===
 '''germanio''' ''m''
 # [[germanium]]
