--- a/wiki/indio.wikitext
+++ b/wiki/indio.wikitext
@@ -1,4 +1,16 @@
-== Spanish == {{wikipediaAlt|indium}}
+==Italian==
+===Pronunciation===
+ìndio, /ˈindjo/, /<tt>"indjo</tt>/
+===Noun===
+'''indio''' ''m''
+
+# [[indium]]
+
+===Related terms===
+*[[indaco]]
+
+----
+== Spanish ==
 === Noun ===
 '''indio''' ''m''
 # [[indium]]
