--- a/wiki/molibdeno.wikitext
+++ b/wiki/molibdeno.wikitext
@@ -1,4 +1,16 @@
-== Spanish == {{wikipediaAlt|molybdenum}}
+==Italian==
+===Pronunciation===
+molibdèno, /molibˈdɛno/, /<tt>molib"dEno</tt>/
+===Noun===
+'''molibdeno''' ''m''
+
+# [[molybdenum]]
+
+===Related terms===
+*[[molibdenite]]
+[[category:Italian elements]]
+----
+== Spanish ==
 === Noun ===
 '''molibdeno''' ''m''
 # [[molybdenum]]
