--- a/wiki/Slovenia.wikitext
+++ b/wiki/Slovenia.wikitext
@@ -36,6 +36,8 @@
 ----
 
 ==Italian==
+===Pronunciation===
+<u>S</u>lovènia, /zloˈvɛnja/, /<tt>zlo"vEnja</tt>/
 ===Proper noun===
 '''Slovenia''' ''f''
 
@@ -43,7 +45,7 @@
 
 ===Related terms===
 *[[sloveno]]
-
+[[Category:It:Countries]]
 [[it:slovenia]]
 [[hu:Slovenia]]
 [[ja:Slovenia]]
