added AHD pronunciation <Etruscan#78527>

--- a/wiki/Etruscan.wikitext
+++ b/wiki/Etruscan.wikitext
@@ -1,8 +1,7 @@
 ==English==
 ==Pronunciation==
-Et·rus·can
-*IPA: //
-eht-RUHS-kan
+*{{AHD|/ĭ-trŭs'kən/}}
+
 ===Adjective===
 '''Etruscan''', '''-s''', ''pl''
 #Of or pertaining to the [[region]] and culture of Etruria, a pre-Roman [[civilization]] in Italy.
