--- a/wiki/Cina.wikitext
+++ b/wiki/Cina.wikitext
@@ -6,12 +6,14 @@
 
 ----
 ==Italian==
+===Pronunciation
+Cina, /ˈtʃina/, /<tt>#tSina</tt>/
 ===Proper Noun===
 '''Cina''' ''f''
 
-#[[China]]
+#[[China]]. Official name: Repubblica Popolare Cinese
 
 ===Related terms===
 *[[cinese]]
-
+[[Category:It:Countries]]
 [[it:cina]]
