--- a/wiki/Cina.wikitext
+++ b/wiki/Cina.wikitext
@@ -6,8 +6,8 @@
 
 ----
 ==Italian==
-===Pronunciation
-Cina, /ˈtʃina/, /<tt>#tSina</tt>/
+===Pronunciation===
+Cina, /ˈtʃina/, /<tt>"tSina</tt>/
 ===Proper Noun===
 '''Cina''' ''f''
 
