--- a/wiki/smoke.wikitext
+++ b/wiki/smoke.wikitext
@@ -26,6 +26,7 @@
 *Esperanto: [[fumo]]
 *Finnish: [[savu]]
 *French: [[fumée]] ''f''
+*German: [[Rauch]] ''m''
 *[[Guarani]]: [[timbo]]
 *Ido: [[fumo]]
 *Interlingua: [[fumo#Interlingua|fumo]]
