--- a/wiki/Macedonia.wikitext
+++ b/wiki/Macedonia.wikitext
@@ -1,11 +1,12 @@
+==English==
 ===Etymology===
 Ancient Greek [[Μακεδονία]].
 
 ===Pronunciation===
 {| border=1 cellpadding=5
-| [[w:IPA|IPA]] || /ˌmæsəˈdoʊniə/
+| [[w:IPA|IPA]] || /ˌmæsəˈdəʊniə/
 |-
-| [[w:SAMPA|SAMPA]] || /%m{s@"doUni@/
+| [[w:SAMPA|SAMPA]] || /%m{s@"d@Uni@/
 |}
 
 ====Proper noun====
@@ -52,6 +53,18 @@ Ancient Greek [[Μακεδονία]].
 *[[Countries of the world]]
 *[[w:Republic of Macedonia|Wikipedia article on the country of Macedonia]]
 *[[w:Macedonia|Wikipedia article on Macedonia, Greece]]
+----
 
+==Italian==
+===Pronunciation===
+Macedònia, /matʃeˈdɔnja/, /<tt>matSe"dOnja</tt>/
+===Proper noun===
+'''Macedonia''' ''f''
+
+# Macedonia
+
+===Related terms===
+*[[macedonico]]
+[[Category:It:Countries]]
 [[hu:Macedonia]]
 [[pl:Macedonia]]
