--- a/wiki/jalear.wikitext
+++ b/wiki/jalear.wikitext
@@ -4,4 +4,4 @@
 # to [[urge]] on; to [[encourage]]
 [[Category:Spanish verbs]] 
 ==== Conjugations ====
-{{template:Es:-ar|jal}}
+{{template:Es:-ar|jale}}
