--- a/wiki/Grecia.wikitext
+++ b/wiki/Grecia.wikitext
@@ -1,9 +1,17 @@
 ==Italian==
+===Pronunciation===
+Grècia, /ˈgreɛtʃa/, /<tt>"grEtSa</tt>/
 ===Proper noun===
 '''Grecia''' ''f''
 
 #[[Greece]]
 
+===Related terms===
+*[[grecheggiare]]
+*[[grecità]]
+*[[grecizzare]]
+*[[greco]]
+[[Category:It:Countries]]
 [[es:Grecia]]
 [[hu:Grecia]]
 [[ja:Grecia]]
