--- a/wiki/Grecia.wikitext
+++ b/wiki/Grecia.wikitext
@@ -1,6 +1,6 @@
 ==Italian==
 ===Pronunciation===
-Grècia, /ˈgreɛtʃa/, /<tt>"grEtSa</tt>/
+Grècia, /ˈgrɛtʃa/, /<tt>"grEtSa</tt>/
 ===Proper noun===
 '''Grecia''' ''f''
 
