/* Translations */  russian <werewolf#50443>

--- a/wiki/werewolf.wikitext
+++ b/wiki/werewolf.wikitext
@@ -27,6 +27,7 @@ Some people have speculated that the myth originates from the disease [[w:Lupus 
 *Italian: [[lupo mannaro]] ''m'', [[licantropo]] ''m''
 *Lithuanian: [[vilktakas]] ''m'', [[vilkolakis]] ''m''
 *Portuguese: [[lobisomem]] ''m''
+*Russian: [[оборотень]] ''m''
 *{{sk}}: [[vlkolak]] ''m''
 *Spanish: [[hombre lobo]] ''m''
 
