add link, alternative example; no need to assert POV speculations , but  examples of man-made disasters less environment-specific are needed <God complex#1636795>

--- a/wiki/God_complex.wikitext
+++ b/wiki/God_complex.wikitext
@@ -2,7 +2,7 @@ A '''God complex''' is a term used to characterize [[arrogant]], individuals pro
 
 ==God complexes and man-made disasters==
 
-In direct proportion to a given disparity of [[wealth]] and [[power]], the opportunities escalate for individuals to assume [[inhuman]], and sometimes [[inhumane]], [[dominionist|dominion]] over others.  God complexes are sometimes blamed for monumental man made disasters.  As wealth and power is consolidated into the hands of individuals at the helm of ever larger organizations and nations, it has become increasingly evident that powerful, and generally very intelligent, people sometimes do incredibly stupid things that contribute to man-made disasters, or compound the tradedy of natural disasters.
+In direct proportion to a given disparity of [[wealth]] and [[power]], the opportunities escalate for individuals to assume [[inhuman]], and sometimes [[inhumane]], [[dominionist|dominion]] over others.  God complexes are sometimes blamed for monumental man made disasters, including [[global warming]], the [[Bhopal]] chemical spill, and incessant flooding in China.  As wealth and power is consolidated into the hands of individuals at the helm of ever larger organizations and nations, it has become increasingly evident that powerful, and generally very intelligent, people sometimes do incredibly stupid things that contribute to man-made disasters, or compound the tradedy of natural disasters.
 
 ==Scholarly research==
 
@@ -18,6 +18,8 @@ In the book ''All Mighty: A Study of the God Complex in Western Man'', by [[Hors
 * "Stupid is as stupid does."  [[Forest Gump]]
 
 ==External links==
+
+* [http://www.fragilecologies.com/aug29_98.html FragileEcologies]] - 'Chinese Floods: A Natural or a Man-Made Disaster?' Michael Glantz (August 29, 1998)
 
 * [http://www.larouchepub.com/other/interviews/2005/3205_justin_frank.html LaRouchePub.com] - '"God Complex" Helps Bush Deal with Anxiety'  issue of ''Executive Intelligence Review'' Interview with Dr. Justin Frank (February 4, 2005)
 * [http://www.mclemee.com/id97.html McLemee.com] - 'The Shrink with a God Complex' Ronald Hayman ''Newsday'', (April 22, 2001) 
