/* External links */ fix typo <God complex#1636795>

--- a/wiki/God_complex.wikitext
+++ b/wiki/God_complex.wikitext
@@ -19,8 +19,7 @@ In the book ''All Mighty: A Study of the God Complex in Western Man'', by [[Hors
 
 ==External links==
 
-* [http://www.fragilecologies.com/aug29_98.html FragileEcologies]] - 'Chinese Floods: A Natural or a Man-Made Disaster?' Michael Glantz (August 29, 1998)
-
+* [http://www.fragilecologies.com/aug29_98.html FragileEcologies] - 'Chinese Floods: A Natural or a Man-Made Disaster?' Michael Glantz (August 29, 1998)
 * [http://www.larouchepub.com/other/interviews/2005/3205_justin_frank.html LaRouchePub.com] - '"God Complex" Helps Bush Deal with Anxiety'  issue of ''Executive Intelligence Review'' Interview with Dr. Justin Frank (February 4, 2005)
 * [http://www.mclemee.com/id97.html McLemee.com] - 'The Shrink with a God Complex' Ronald Hayman ''Newsday'', (April 22, 2001) 
 * [http://news-service.stanford.edu/news/2003/september10/caligula-910.html News-Service.Stanford.edu] - 'Did Caligula have a God complex?  Stanford, Oxford archaeologists find evidence that depraved tyrant annexed sacred temple', John Sanford (September 10, 2003)
