--- a/wiki/Indonesia.wikitext
+++ b/wiki/Indonesia.wikitext
@@ -1,24 +1,25 @@
 ==English==
 ===Proper noun===
-
+'''Indonesia'''
 # Country in Southeast Asia. Official name: Republic of Indonesia.
+
 ===Translations===
-*[[Bosnian]]: Indonezija ''f''
+*[[Bosnian]]: [[Indonezija]] ''f''
 *[[Breton]]: [[Indonezia]]
-*[[Chinese]]: [[印度尼西亚]]
+*[[Chinese: [[印度尼西亚]]
 *[[Danish]]: [[Indonesien]]
 *[[Dutch]]: [[Indonesië]]
 *[[Esperanto]]: [[Indonezio]]
-*[[Finnish]]: Indonesia
-*[[French]]: [[Indonésie]]
-*[[German]]: [[Indonesien]]
-*[[Greek]]: [[Ινδονησία]]
-*[[Hungarian]]: [[Indonézia]]
+*Finnish: Indonesia
+*French: [[Indonésie]]
+*German: [[Indonesien]]
+*Greek: [[Ινδονησία]]
+*Hungarian: [[Indonézia]]
 *[[Indonesian]]: [[Indonesia]]
 *[[Interlingua]]: [[Indonesia]]
-*[[Italian]]: Indonesia
-*[[Japanese]]: [[インドネシア]]
-*[[Maldivian]]: Asey kara
+*Italian: Indonesia
+*Japanese: [[インドネシア]]
+*[[Maldavian]]: [[Asey kara]]
 *[[Polish]]: [[Indonezja]]
 *[[Portuguese]]: [[Indonésia]]
 *[[Romanian]]: [[Indonezia]] ''f''
@@ -32,6 +33,19 @@
 *[[w:Indonesia|Wikipedia article on Indonesia]]
 [[Category:English country nouns]]
 
+----
+
+==Italian==
+===Pronunciation===
+Indonè<u>s</u>ia, /indoˈnɛzja/, /<tt>indo"nEzja</tt>/
+===Proper noun===
+'''Indonesia''' ''f''
+
+# Indonesia
+
+===Related terms===
+*[[indonesiano]]
+[[category:It:countries]]
 [[hi:Indonesia]]
 [[it:Indonesia]]
 [[hu:Indonesia]]
