--- a/wiki/Indonesia.wikitext
+++ b/wiki/Indonesia.wikitext
@@ -6,27 +6,27 @@
 ===Translations===
 *[[Bosnian]]: [[Indonezija]] ''f''
 *[[Breton]]: [[Indonezia]]
-*[[Chinese: [[印度尼西亚]]
-*[[Danish]]: [[Indonesien]]
-*[[Dutch]]: [[Indonesië]]
+*Chinese: [[印度尼西亚]] (Yindunixiya)
+*Danish: [[Indonesien]]
+*Dutch: [[Indonesië]]
 *[[Esperanto]]: [[Indonezio]]
 *Finnish: Indonesia
 *French: [[Indonésie]]
 *German: [[Indonesien]]
 *Greek: [[Ινδονησία]]
 *Hungarian: [[Indonézia]]
-*[[Indonesian]]: [[Indonesia]]
-*[[Interlingua]]: [[Indonesia]]
+*[[Indonesian]]: Indonesia
+*[[Interlingua]]: Indonesia
 *Italian: Indonesia
 *Japanese: [[インドネシア]]
-*[[Maldavian]]: [[Asey kara]]
-*[[Polish]]: [[Indonezja]]
-*[[Portuguese]]: [[Indonésia]]
-*[[Romanian]]: [[Indonezia]] ''f''
-*[[Russian]]: [[Индонезия]]
-*[[Spanish]]: Indonesia
-*[[Swedish]]: [[Indonesien]]
-*[[Turkish]]: [[Endonezya]]
+*[[Maldivian]]: [[Asey kara]]
+*Polish: [[Indonezja]]
+*Portuguese: [[Indonésia]]
+*Romanian: [[Indonezia]] ''f''
+*Russian: [[Индонезия]] (Indonjezija)
+*Spanish: Indonesia
+*Swedish: [[Indonesien]]
+*Turkish: [[Endonezya]]
 
 ===See also===
 *[[Countries of the world]]
