--- a/wiki/Indonesia.wikitext
+++ b/wiki/Indonesia.wikitext
@@ -45,7 +45,7 @@ Indonè<u>s</u>ia, /indoˈnɛzja/, /<tt>indo"nEzja</tt>/
 
 ===Related terms===
 *[[indonesiano]]
-[[category:It:countries]]
+[[Category:It:Countries]]
 [[hi:Indonesia]]
 [[it:Indonesia]]
 [[hu:Indonesia]]
