--- a/wiki/Hmong.wikitext
+++ b/wiki/Hmong.wikitext
@@ -1,1 +1,11 @@
-chinese people language
+==English==
+{{wikipedia}}
+{{wikipediapar|Hmong language}}
+===Proper noun===
+'''Hmong'''
+# A people of southern China.
+# Their language.
+
+===Adjective===
+'''Hmong'''
+# Of or relating to the Hmong people, culture, or language.
