/* Adjective */ fixing self-referentialness <Hmong#99789>

--- a/wiki/Hmong.wikitext
+++ b/wiki/Hmong.wikitext
@@ -8,4 +8,4 @@
 
 ===Adjective===
 '''Hmong'''
-# Of or relating to the Hmong people, culture, or language.
+# Of or relating to the people, culture, or language of the Hmong.
