--- a/wiki/Hmong.wikitext
+++ b/wiki/Hmong.wikitext
@@ -8,4 +8,4 @@
 
 ===Adjective===
 '''Hmong'''
-# Of or relating to the people, culture, or language of the Hmong.
+# Of or relating to the Hmong, their culture, or their language.
