/* See also */ <dog#3649675>

--- a/wiki/dog.wikitext
+++ b/wiki/dog.wikitext
@@ -272,7 +272,7 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 *[[pup]], [[puppy]]
 
 ====See also====
-*{{Wikipedia}}
+{{Wikipedia}}
 
 ----
 
