--- a/wiki/brass_monkey.wikitext
+++ b/wiki/brass_monkey.wikitext
@@ -1,18 +1,18 @@
-===English===
+==English==
+
+===Alternative spellings===
+'''brass-monkey'''
+
+===Etymology===
+''(Disputed):'' From the phrase '''[[cold enough to freeze the balls off a brass monkey]]'''.  See [[w:Brass Monkey|Wikipedia]] for details.
+
+===Adjective phrase===
+'''brass monkey''' (''no [[comparative]] or [[superlative]], used only before the noun'')
 #a cocktail of vodka, rum and orange juice, sometimes with the addition of galliano
 #a kind of inexpensive liquer
 #an Australian beer 
 #said of the weather when it is very cold.
 #:''It's brass monkey weather today, isn't it?''
-
-===Etymology===
-From the phrase '''[[cold enough to freeze the balls off a brass monkey]]'''.  See [[w:Brass Monkey|Wikipedia]] for details.
-
-===Adjective phrase===
-'''brass monkey''' (''no [[comparative]] or [[superlative]], used only before the noun'')
-
-====Variant spellings====
-'''brass-monkey'''
 
 ===External links===
 *:[[http://www.snopes.com/language/stories/brass.htm SPAM debunking from Snopes]]
