--- a/wiki/vivere.wikitext
+++ b/wiki/vivere.wikitext
@@ -22,31 +22,25 @@
 
 <center>
 {| style="background:#F0F0F0"
-|-
-! colspan="2" style="background:#e2e4c0" |
-! colspan="3" style="background:#e2e4c0" | simple
-! colspan="3" style="background:#e2e4c0" | compound
 
 |-
-! colspan="2" style="background:#e2e4c0" | [[infinitive]]
-| colspan="3" | vivere
-| colspan="3" | essere vissuto
+! colspan="3" style="background:#e2e4c0" | infinitive
+| colspan="5" | vivere
 
 |-
-! colspan="2" style="background:#e2e4c0" | [[gerund]]
-| colspan="3" | vivendo
-| colspan="3" | essendo vissuto
+! colspan="3" style="background:#e2e4c0" | gerund
+| colspan="5" | vivendo
 
 |-
-! colspan="2" style="background:#e2e4c0" | [[present participle]]
-| colspan="3" | vivente
+! colspan="3" style="background:#e2e4c0" | present participle
+| colspan="5" | [[vivente]]
 
 |-
-! colspan="2" style="background:#e2e4c0" | [[past participle]]
-| colspan="3" | vissuto
+! colspan="3" style="background:#e2e4c0" | past participle
+| colspan="5" | [[vissuto]]
 
 |-
-! colspan="2" rowspan="2" style="background:#C0C0C0" | [[person]]
+! colspan="2" rowspan="2" style="background:#C0C0C0" | person
 ! colspan="3" style="background:#C0C0C0" | singular
 ! colspan="3" style="background:#C0C0C0" | plural
 
@@ -59,7 +53,8 @@
 ! style="background:#C0C0C0;width:12.5%" | third
 
 |-
-! style="background:#c0cfe4" colspan="2" | [[indicative]]
+! style="background:#c0cfe4" rowspan="5" | indicative
+! style="background:#c0cfe4" | 
 ! style="background:#c0cfe4" | io
 ! style="background:#c0cfe4" | tu
 ! style="background:#c0cfe4" | lui/lei
@@ -68,9 +63,7 @@
 ! style="background:#c0cfe4" | loro
 
 |-
-! rowspan="5" style="background:#c0cfe4" | simple<br>tenses
-
-! style="height:3em;background:#c0cfe4" | [[present]]
+! style="height:3em;background:#c0cfe4" | present
 | vivo
 | vivi
 | vive
@@ -79,7 +72,7 @@
 | vivono
 
 |-
-! style="height:3em;background:#c0cfe4" | [[imperfect]]
+! style="height:3em;background:#c0cfe4" | imperfect
 | vivevo
 | vivevi
 | viveva
@@ -88,7 +81,7 @@
 | vivevano
 
 |-
-! style="height:3em;background:#c0cfe4" | [[passato remoto]]
+! style="height:3em;background:#c0cfe4" | passato remoto
 | vissi
 | vivesti
 | visse
@@ -97,7 +90,7 @@
 | vissero
 
 |-
-! style="height:3em;background:#c0cfe4" | [[future]]
+! style="height:3em;background:#c0cfe4" | future
 | vivrò
 | vivrai
 | vivrà
@@ -106,7 +99,7 @@
 | vivranno
 
 |-
-! style="height:3em;background:#c0cfe4" | [[conditional]]
+! style="height:3em;background:#c0cfe4" colspan="2" | conditional
 | vivrei
 | vivresti
 | vivrebbe
@@ -115,28 +108,8 @@
 | vivrebbero
 
 |-
-! rowspan="5" style="background:#c0cfe4" | compound<br>tenses
-
-! style="height:3em;background:#c0cfe4" | [[passato prossimo]]
-! colspan="6" style="background:#C0C0C0" | Use present tense of essere plus [[past participle]]
-
-|-
-! style="height:3em;background:#c0cfe4" | [[trapassato prossimo]]
-! colspan="6" style="background:#C0C0C0" | Use imperfect tense of essere plus [[past participle]]
-
-|-
-! style="height:3em;background:#c0cfe4" | [[trapassato remoto]]
-! colspan="6" style="background:#C0C0C0" | Use passato remoto of essere plus [[past participle]]
-
-|-
-! style="height:3em;background:#c0cfe4" | [[futuro anteriore]]
-! colspan="6" style="background:#C0C0C0" | Use future tense of essere plus [[past participle]]
-
-|-
-! style="height:3em;background:#c0cfe4" | [[condizionale passato]]
-! colspan="6" style="background:#C0C0C0" | Use conditional tense of essere plus [[past participle]]
-|-
-! style="background:#c0e4c0" colspan="2" | [[subjunctive]]
+! style="background:#c0e4c0" rowspan="3" | subjunctive
+! style="background:#c0e4c0" | 
 ! style="background:#c0e4c0" | che io
 ! style="background:#c0e4c0" | che tu
 ! style="background:#c0e4c0" | che lui/che lei
@@ -145,9 +118,7 @@
 ! style="background:#c0e4c0" | che loro
 
 |-
-! rowspan="2" style="background:#c0e4c0" | simple<br>tenses
-
-! style="height:3em;background:#c0e4c0" | [[present]]
+! style="height:3em;background:#c0e4c0" | present
 | viva
 | viva
 | viva
@@ -156,7 +127,7 @@
 | vivano
 
 |-
-! style="height:3em;background:#c0e4c0" rowspan="1" | [[imperfect]]
+! style="height:3em;background:#c0e4c0" rowspan="1" | imperfect
 | vivessi
 | vivessi
 | vivesse
@@ -165,17 +136,7 @@
 | vivessero
 
 |-
-! rowspan="2" style="background:#c0e4c0" | compound<br>tenses
-
-! style="height:3em;background:#c0e4c0" | [[passato]]
-! colspan="6" style="background:#C0C0C0" | Use present subjunctive of essere plus [[past participle]]
-
-|-
-! rowspan="1" style="height:3em;background:#c0e4c0" | [[trapassato]]
-! colspan="6" style="background:#C0C0C0" | Use imperfect subjunctive of essere plus [[past participle]]
-
-|-
-! colspan="2" rowspan="2" style="height:3em;background:#e4d4c0" | [[imperative]]
+! colspan="2" rowspan="2" style="height:3em;background:#e4d4c0" | imperative
 ! style="background:#e4d4c0" | -
 ! style="background:#e4d4c0" | tu
 ! style="background:#e4d4c0" | lui/lei
@@ -193,4 +154,5 @@
 
 |}
 </center>
+[[category:Italian verbs]]
 [[it:vivere]]
