/* Pronunciation */ fix IPA (remove WEAE), add SAMPA <along#41177>

--- a/wiki/along.wikitext
+++ b/wiki/along.wikitext
@@ -3,7 +3,8 @@
 OE. along, anlong, AS. andlang, along; pref. and- (akin to OFris. ond-, OHG. ant-, Ger. ent-, Goth. and-, anda-, Latin [[ante]], Gr. ?, Skr. anti, over against) + lang long.  See [[Long]].
 
 ===Pronunciation===
-IPA: [[WEAE]] /ʌˈlɑŋ/
+*{{IPAlink}} /əˈlɒŋ/
+*{{SAMPA}} /@"lQN/
 
 ===Preposition===
 # By the length; in a line with the length; lengthwise.
