--- a/wiki/salmon.wikitext
+++ b/wiki/salmon.wikitext
@@ -22,7 +22,7 @@ From Latin ''[[salmo]]'', leaper
 {|
 <!--Put translations for languages from A to I here-->
 *Catalan: [[salmó]] ''m''
-*Chinese: [[三文鱼]] (sān wén yú)
+*Chinese: [[三文鱼]] (sānwényú), [[gui1yu2]]
 *Estonian: [[lõhe]]
 *Finnish: [[lohi]]
 *French: [[saumon]] ''m''
