arabic, maltese <Hungary#2354>

--- a/wiki/Hungary.wikitext
+++ b/wiki/Hungary.wikitext
@@ -8,6 +8,7 @@
 *[[Hungarian]]
 
 ====Translations====
+*Arabic: [[المجر]] Al-Majar
 *[[Bosnian]]: [[Mađarska]] ''f''
 *[[Breton]]: [[Hungaria]]
 *[[Catalan]]: [[Hongria]]
@@ -27,6 +28,7 @@
 *Italian: [[Ungheria]] ''f''
 *Japanese: [[ハンガリー]] (Hangarī)
 *Latvian: [[Ungārija]] ''f''
+*Maltese: [[l-Ungerja]]
 *[[Persian]]: [[مجارستان]] (Majarestan)
 *Polish: [[Węgry]] ''pl''
 *Portuguese: [[Hungria]] ''f''
