--- a/wiki/tuna.wikitext
+++ b/wiki/tuna.wikitext
@@ -16,6 +16,7 @@
 *tuna fish (US 1,2)
 
 ==== Translations ====
+*Chinese pinyin: [[jinqiangyu]], [[jin1qiang1yu2]]
 *Czech: [[tuňák]] ''m''
 *Dutch: [[tonijn]] ''m''
 *French: [[thon]] ''m''
