--- a/wiki/sushi.wikitext
+++ b/wiki/sushi.wikitext
@@ -14,7 +14,7 @@ From Japanese [[すし]]<!-- many kanji forms, no need to put them all here too 
 
 ====Translations====
 *Chinese: [[寿司]] (shòusī)
-*Japanese: [[鮨]], [[鮓]], [[寿司]], [[すし]] (sushi)<!-- all kanji are [[ateji]] -->
+*Japanese: [[鮨]], [[鮓]], [[寿司]], [[すし]] (sushi)<!-- only 寿司 is [[ateji]] -->
 
 ===See also===
 *[[sashimi]]
