--- a/wiki/turkey.wikitext
+++ b/wiki/turkey.wikitext
@@ -22,7 +22,7 @@
 *Breton: [[Turkia]]
 *Bulgarian: [[Турция]] (Turcija)
 *Catalan: [[Turquia]]
-*Chinese: [[土耳其]] (tǔ'ěrqí)
+*Chinese: [[土耳其]] (Tǔ'ěrqí)
 *Czech: [[Turecko]]
 *Danish: [[Tyrkiet]]
 *Dutch: [[Turkije]]
