--- a/wiki/maize.wikitext
+++ b/wiki/maize.wikitext
@@ -21,6 +21,7 @@ Spanish [[maíz]], from [[w:Taíno|Taíno]] [[maisí]], [[mahis]] (variously spe
 *[[corn]] (US English)
 
 ====Translations====
+*Chinese pinyin: [[sumi]], [[su4mi3]]
 *Danish: [[majs]]
 *Dutch: [[maïs]] ''m''
 *French: [[maïs]] ''m''
