--- a/wiki/wheat.wikitext
+++ b/wiki/wheat.wikitext
@@ -6,6 +6,7 @@
 ====Translations====
 *[[Basque]]: [[gari]]
 *[[Catalan]]: [[blat]] ''m''
+*Chinese pinyin: [[xiaomai]], [[xiao3mai4]]
 *Dutch: [[tarwe]] ''m''
 *French: [[froment]] ''m''
 *[[Frisian]]: [[weet]]
