robot  Adding:tr Modifying:he <zen#647647>

--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -212,7 +212,7 @@ The Vietnamese Zen teacher [[Thich Nhat Hanh]] has developed the [[Order of Inte
 [[fr:Zen]]
 [[id:Zen]]
 [[it:Buddhismo Zen]]
-[[he:&#1494;&#1503;]]
+[[he:&#1494;&#1503; &#1489;&#1493;&#1491;&#1492;&#1497;&#1494;&#1501;]]
 [[nl:Zen]]
 [[ja:&#31109;]]
 [[no:Zen]]
@@ -220,5 +220,6 @@ The Vietnamese Zen teacher [[Thich Nhat Hanh]] has developed the [[Order of Inte
 [[pt:Zen]]
 [[ru:&#1044;&#1079;&#1077;&#1085;]]
 [[sv:Zen]]
-[[vi:Thi&#7873;n tông]]
+[[vi:Thi&#7873;n t&#244;ng]]
+[[tr:Zen]]
 [[zh:&#31109;&#23447;]]
