--- a/wiki/barley.wikitext
+++ b/wiki/barley.wikitext
@@ -6,6 +6,7 @@
 
 ====Translations====
 *Chinese: [[大麥]], [[大麦]]
+*Chinese pinyin: [[damai]], [[da4mai4]]
 *Dutch: [[gerst]] ''m''
 *Finnish: [[ohra]]
 *French: [[orge]] ''m''
