--- a/wiki/Germania.wikitext
+++ b/wiki/Germania.wikitext
@@ -2,7 +2,7 @@
 ===Pronunciation===
 Germània, /dʒerˈmanja/, /<tt>dZer"manja</tt>/
 ===Proper noun===
-'''Germanio''' ''f''
+'''Germania''' ''f''
 
 # [[Germany]]. Official name: Repubblica Federale Tedesca.
 
