--- a/wiki/oats.wikitext
+++ b/wiki/oats.wikitext
@@ -4,7 +4,8 @@
 # plural of [[oat]]
 
 ===Translations===
-Russian [[овёс]]
+*Chinese pinyin: [[yanmai]], [[yan4mai4]]
+*Russian [[овёс]]
 
 [[fr:oats]]
 [[it:oats]]
