--- a/wiki/English.wikitext
+++ b/wiki/English.wikitext
@@ -4,7 +4,9 @@
 From Old English '''[[Englisc]]''', from '''[[Engle]]''' ("the [[Angles]]," a Germanic tribe).
 
 ===Pronunciation===
-*ĭng'glĭsh, {{IPA|/ˈɪŋglɪʃ/}}, /<tt>"INglIS</tt>/
+*ĭng'glĭsh
+*{{IPA|/ˈɪŋglɪʃ/}}
+*{{SAMPA}} /<tt>"INglIS</tt>/
 
 ===Noun===
 '''English''', plural [[English]]es
@@ -137,7 +139,7 @@ From Old English '''[[Englisc]]''', from '''[[Engle]]''' ("the [[Angles]]," a Ge
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Arabic: [[بريطاني|بِرِيطَانِيّ]] {{IPA|(biriʈáːni)}} ''m'', [[بريطاني|بِرِيطَانِيَّةٌ]] {{IPA|(biriʈaníyya)}} ''f''
+*Arabic: [[بريطاني|بِرِيطَانِيّ]] {{IPAchar|(biriʈáːni)}} ''m'', [[بريطاني|بِرِيطَانِيَّةٌ]] {{IPAchar|(biriʈaníyya)}} ''f''
 *[[Breton]]: [[Saoz]] ''m'', Saozon ''pl'', [[Saozez]] ''f'', Saozezed ''f pl''
 *Bulgarian: [[англичанин]] (angličánin) ''m'', [[англичанка]] (angličánka) ''f''
 *[[Catalan]]: [[anglès]] ''m'', [[anglesa]] ''f''
