--- a/wiki/tobacco.wikitext
+++ b/wiki/tobacco.wikitext
@@ -10,6 +10,7 @@
 ====Translations====
 *Catalan: [[tabac]] ''m'' (1,2)
 *Chinese: [[烟草]] (yancao), [[烟叶]]/[[烟葉]] (yanye), [[菸草]]
+*Chinese pinyin: [[yancao]], [[yan1cao3]]; [[yanye]], [[yan1ye4]]
 *Dutch: [[tabaksplant]] (1), [[tabak]] ''m'' (2)
 *Esperanto: [[tabako]] (1,2)
 *Finnish: [[tupakka]]
