--- a/wiki/alcohol.wikitext
+++ b/wiki/alcohol.wikitext
@@ -15,6 +15,7 @@ Arabic
 
 ====Translations====
 *'''Chinese''': [[酒精]]
+*Chinese pinyin: [[jiujing]], [[jiu3jing1]]
 *'''Czech''': [[alkohol]] ''m''
 *'''Dutch''': alcohol ''m''
 *'''Farsi''': [[الکل]] (alkol)
