--- a/wiki/abbandono.wikitext
+++ b/wiki/abbandono.wikitext
@@ -1,5 +1,13 @@
 ==Italian==
+===Pronunciation===
+abbandóno, /abbanˈdono/, /<tt>abban"dono</tt>/
 ===Noun===
 '''abbandono''' ''m'' (''plural'' abbandoni)
+
 # [[desertion]], [[abandonment]]
-# ([[sport]]) [[withdrawal]]
+# (''sport'') [[withdrawal]]
+
+===Verb form===
+'''abbandono'''
+
+# ''first-person singular indicative present of [[abbandonare]]''
