--- a/wiki/tobacco.wikitext
+++ b/wiki/tobacco.wikitext
@@ -9,8 +9,7 @@
 
 ====Translations====
 *Catalan: [[tabac]] ''m'' (1,2)
-*Chinese: [[烟草]] (yancao), [[烟叶]]/[[烟葉]] (yanye), [[菸草]]
-*Chinese pinyin: [[yancao]], [[yan1cao3]]; [[yanye]], [[yan1ye4]]
+*Chinese: [[烟草]] (yancaoyan1cao3), [[烟叶]]/[[烟葉]] (yanye, yan1ye4), [[菸草]]
 *Dutch: [[tabaksplant]] (1), [[tabak]] ''m'' (2)
 *Esperanto: [[tabako]] (1,2)
 *Finnish: [[tupakka]]
