--- a/wiki/absorbent.wikitext
+++ b/wiki/absorbent.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Pronunciation===
-*[[w:IPA|IPA]]: {{IPA|/əbs"ɔː(r)bənt/}}
-*[[w:SAMPA|SAMPA]]: {{IPA|/@bs'O:(r)b@nt/}}
+*{{IPA|/əbs"ɔː(r)bənt/}}
+*[[w:SAMPA|SAMPA]]: {{IPAchar|/@bs'O:(r)b@nt/}}
 
 ===Etymology===
 Latin ''absorbens'', past preterite of ''absorbere''.
