--- a/wiki/intransitive_verb.wikitext
+++ b/wiki/intransitive_verb.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Pronunciation===
-*IPA: {{IPA|/ɪnˌtrænsətɪv ˈvɜːb/, /ɪnˌtrænzətɪv ˈvɜːb/}}
-*SAMPA: /In%tr{ns@tIv "v3:b/, /In%tr{nz@tIv "v3:b/
+*{{IPA|/ɪnˌtrænsətɪv ˈvɜːb/, /ɪnˌtrænzətɪv ˈvɜːb/}}
+*{{SAMPA}} /In%tr{ns@tIv "v3:b/, /In%tr{nz@tIv "v3:b/
 
 ===Noun===
 '''intransitive verb'''
