--- a/wiki/payment.wikitext
+++ b/wiki/payment.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Pronunciation===
 *{{SAMPA}} /'peIm@nt/
-*{{IPAlink}} {{IPA|/'peɪmənt/}}
+*{{IPA|/'peɪmənt/}}
 *{{AHD|/pāmĕnt/}}
 
 ===Noun===
