--- a/wiki/done.wikitext
+++ b/wiki/done.wikitext
@@ -1,6 +1,6 @@
 === Pronunciation ===
-*[[w:IPA|IPA]]: {{IPA|/'dʌn/}}
-*[[w:SAMPA|SAMPA]]: /"dVn/
+*{{IPA|/'dʌn/}}
+*{{w:SAMPA|SAMPA}}: /"dVn/
 
 === Verb ===
 
