--- a/wiki/mean.wikitext
+++ b/wiki/mean.wikitext
@@ -1,6 +1,6 @@
 ==English==
 === Pronunciation ===
-*{{IPAlink}} {{IPA|/miːn/}}
+*{{IPA|/miːn/}}
 *{{AHD|/mēn/}}
 === mean (1) ===
 ''' transitive verb'''
