it doesn't mean soul mother. <alma mater#508026>

--- a/wiki/alma_mater.wikitext
+++ b/wiki/alma_mater.wikitext
@@ -1,4 +1,4 @@
-'''Alma mater''' is a term of [[academia]]. "Alma mater" is the [[Latin]] term for "soul mother".  It is  used, less frequently than formerly, in the [[English language]] as a [[sobriquet]] for the [[university]] or [[college]] a person has attended.  In [[American English]], it is also in reference to a [[high school]] or [[elementary school]].  Alma mater is sometimes the ''[[incipit]]'' of a school's anthem or song, and may be taken as a title for the genre.  
+'''Alma mater''' is a term of [[academia]]. "Alma mater" is the [[Latin]] term for "nourishing mother".  It is  used, less frequently than formerly, in the [[English language]] as a [[sobriquet]] for the [[university]] or [[college]] a person has attended.  In [[American English]], it is also in reference to a [[high school]] or [[elementary school]].  Alma mater is sometimes the ''[[incipit]]'' of a school's anthem or song, and may be taken as a title for the genre.  
 
 The word "matriculation" is derived from the Latin root word ''mater''.  The term suggests that the students are fed knowledge and taken care of by the educational institution.
 
