--- a/wiki/biweekly.wikitext
+++ b/wiki/biweekly.wikitext
@@ -4,7 +4,7 @@
 
 === Pronunciations ===
 *{{SAMPA}} /baI.wik.li/
-*{{IPAlink}} {{IPA|/baɪ.'wik.li/}}
+*{{IPA|/baɪ.'wik.li/}}
 *{{AHD|/bī-wēk'lē/}}
 
 ===Etymology===
