--- a/wiki/appoggiatura.wikitext
+++ b/wiki/appoggiatura.wikitext
@@ -4,7 +4,7 @@ Borrowed from Italian ''appoggiatura'', derived from ''appoggiare'', meaning "to
 
 === Pronunciations ===
 *{{SAMPA}} /@.pO.dZ@."tur.@/
-*{{IPAlink}} {{IPA|/ə.pɔ.dʒə.'tʊɹ.ə/}}
+*{{IPA|/ə.pɔ.dʒə.'tʊɹ.ə/}}
 
 ===Noun===
 '''appoggiatura'''
