--- a/wiki/admit.wikitext
+++ b/wiki/admit.wikitext
@@ -4,7 +4,7 @@
 {{OE.}} ''[[amitten]]'', {{L.}} ''[[admittere]], [[admissum]]''; [[ad-]] + [[mittere]] to send.
 
 ===Pronunciation===
-*{{IPAlink}} [[WEAE]] {{IPA|/ædˈmɪt/}}
+* {{IPA| [[WEAE]] /ædˈmɪt/}}
 *{{audio|en-us-admit.ogg|Audio pronunciation}}
 
 ===Transitive Verb===
