--- a/wiki/petard.wikitext
+++ b/wiki/petard.wikitext
@@ -4,7 +4,7 @@
 
 === Pronunciation ===
 *{{SAMPA}} /pE."tArd/
-*{{IPAlink}} {{IPA|/pɛ.'tɑɹd/}}
+*{{IPA|/pɛ.'tɑɹd/}}
 
 ===Noun===
 #A hat shaped [[explosive]] device, now rarely used.
