--- a/wiki/abad.wikitext
+++ b/wiki/abad.wikitext
@@ -19,7 +19,7 @@
 == Spanish ==
 === Pronunciation ===
 *{{SAMPA}} /@."bAd/
-*{{IPAlink}} {{IPA|/ə.'bɑd/}}
+*{{IPA|/ə.'bɑd/}}
 
 === Noun ===
 '''abad''' ''m''
