--- a/wiki/credibility.wikitext
+++ b/wiki/credibility.wikitext
@@ -4,7 +4,7 @@ From the French ''[[crdibilit]]''
 
 === Pronunciation ===
 *{{SAMPA}} /"krEd.@.bI.5I.ti/
-*{{IPAlink}} /{{IPA|ˈkɹɛd.ə.bɪ.ɫɪ.ti}}/
+*{{IPA|/ˈkɹɛd.ə.bɪ.ɫɪ.ti}}/
 
 ===Noun===
 '''credibility'''
