--- a/wiki/kiln.wikitext
+++ b/wiki/kiln.wikitext
@@ -4,6 +4,6 @@ From the Middle English ''[[kilne]]'' from the Old English ''[[cyln]]'' from the
 
 === Pronunciations ===
 *{{SAMPA}} /ki5n/ ''or'' /ki5/
-*{{IPAlink}} {{IPA|/kɪɫn/ ''or'' /kɪɫ/}}
+*{{IPA|/kɪɫn/ ''or'' /kɪɫ/}}
 ===Noun===
 #An [[oven]] for firing [[ceramic]]s.
