--- a/wiki/chthonic.wikitext
+++ b/wiki/chthonic.wikitext
@@ -1,7 +1,7 @@
 == English ==
 === Pronunciations ===
 *{{SAMPA}} /"TA.nIk/
-*{{IPAlink}} {{IPA|/'θɑ.nɪk/}}
+*{{IPA|/'θɑ.nɪk/}}
 === Adjective ===
 {{wikipedia}}
 '''chthonic'''
