--- a/wiki/abadesa.wikitext
+++ b/wiki/abadesa.wikitext
@@ -1,7 +1,7 @@
 == Spanish ==
 === Pronunciation ===
 *{{SAMPA}} /@.bAd."e(I)s.@/
-*{{IPAlink}} {{IPA|/ə.bɑd.'e(ɪ)s.ə/}}
+* {{IPA|/ə.bɑd.'e(ɪ)s.ə/}}
 
 === Noun ===
 '''abadesa''' ''f''
