--- a/wiki/arg%C3%B3n.wikitext
+++ b/wiki/arg%C3%B3n.wikitext
@@ -1,7 +1,7 @@
 == Spanish ==
 === Pronunciation ===
 *{{SAMPA}} /Ar."go(U)n/
-*{{IPAlink}} {{IPA|/ɑɹ.'go(ʊ)n/}}
+* {{IPA|/ɑɹ.'go(ʊ)n/}}
 === Noun ===
 '''argón'''
 # [[argon]]
