--- a/wiki/poignant.wikitext
+++ b/wiki/poignant.wikitext
@@ -4,7 +4,7 @@ From the Old French ''[[poignant]]'' from ''[[poindre]]'' "to prick" from the La
 
 === Pronunciations ===
 *{{SAMPA}} /"pOIn.jEnt/
-*{{IPAlink}} {{IPA|/'pɔɪn.jɛnt/}}
+*{{IPA|/'pɔɪn.jɛnt/}}
 
 ===Adjective===
 '''poignant'''
