--- a/wiki/airframe.wikitext
+++ b/wiki/airframe.wikitext
@@ -1,7 +1,7 @@
 == English ==
 === Pronunciations ===
 *{{SAMPA}} /"Er.fre(I)m/
-*{{IPAlink}} {{IPA|/'ɛɹ.fɹe(ɪ)m/}}
+*{{IPA|/'ɛɹ.fɹe(ɪ)m/}}
 *{{AHD|/âr'frām'/}}
 
 === Noun ===
