--- a/wiki/power_plant.wikitext
+++ b/wiki/power_plant.wikitext
@@ -1,7 +1,7 @@
 == English ==
 === Pronunciations ===
 *{{SAMPA}} /paU@` pl{nt/ or /"paU.=@` pl{nt/
-*{{IPAlink}} {{IPA|/paʊɚ plænt/ or /paʊ.̩̩ɚ plænt/}}
+*{{IPA|/paʊɚ plænt/ or /paʊ.̩̩ɚ plænt/}}
 
 === Noun ===
 '''power plant''' ''or'' '''powerplant'''
