--- a/wiki/template.wikitext
+++ b/wiki/template.wikitext
@@ -1,8 +1,11 @@
 ==English==
-===Noun===
-'''template''' ([[templates]])
 
+===Noun===
+'''template'''  (''plural:'' '''[[templates]]''')
 # a [[pattern]] used for making multiple copies of a single object
+
+====See also====
+*[[Wiktionary:Index to templates]]
 
 ====Translations====
 *Chinese: [[模板]]
