--- a/wiki/Holy_Father.wikitext
+++ b/wiki/Holy_Father.wikitext
@@ -1,1 +1,5 @@
-The "Holy Father" is a term used to name the Pope of the Catholic Church.  He is leader of the world's largest religion.  His official residence is in the soverign state of the Vatican City.  The current Holy Father is His Holiness Pope [[Benedict XVI]]
+==English==
+
+===Proper noun===
+'''Holy Father'''
+# The title of the Pope of the Catholic Church, the leader of the world's largest religion.  His official residence is in the soverign state of the Vatican City.  The current Holy Father is His Holiness Pope [[Benedict XVI]]
