--- a/wiki/apothegm.wikitext
+++ b/wiki/apothegm.wikitext
@@ -1,11 +1,16 @@
 ==English==
 === Etymology ===
-[[Greek]] '''''apophthegma''''' "something clearly spoken"
+First attested [[w:1553|1553]], from {{Gr.}} '''''apophthegma''''' "something clearly spoken", from [[apo-]], "[[from]]" + [[phthengesthai]], "to [[say]], [[utter]]."
+
 === Pronunciations ===
+*{{AHD|ăpə-thĕm′}}
 *{{SAMPA}} /{p."E.TEm/
-*{{IPA|/æp.ˈɛ.ðɛm}}/
+*{{IPA|/æp.ˈɛ.θɛm}}/
+
 ===Noun===
 '''apothegm''' ''or'' '''apophthegm''' (Brit.)
 #a [[short]] [[witty]] [[instructive]] [[saying]]; an [[aphorism]] or [[maxim]]
-#: '''Note:''' Not to be confused with the [[homonym]] ''[[apothem]]''.
+====Usage notes====
+*Not to be confused with the [[homonym]] ''[[apothem]]''.
+
 [[Category:English nouns]]
