init def <hew#99786>

--- a/wiki/hew.wikitext
+++ b/wiki/hew.wikitext
@@ -1,1 +1,5 @@
-hew
+==English==
+
+===Verb===
+'''to hew'''  ('''[[hews]], [[hewn]]''')
+# to [[chop]] away at; to [[whittle]] down; to [[mow]] down
