--- a/wiki/potato.wikitext
+++ b/wiki/potato.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From Spanish [[patata]].
+From Taino [[batata]] via Spanish [[patata]].
 
 ===Noun===
 '''potato''' (plural: [[potatoes]])
@@ -14,7 +14,7 @@ From Spanish [[patata]].
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
-*Chinese: [[土豆]], [[马铃薯]], [[ma3ling2shu3]]
+*Chinese: [[土豆]], [[马铃薯]], (mălíngshŭ)
 *Czech: [[brambor]]
 *Danish: [[kartoffel]]
 *Dutch: [[aardappel]] ''f'', [[pieper]] ''m'', [[patat]] ''f''
@@ -34,15 +34,13 @@ From Spanish [[patata]].
 *Polish: [[ziemniak]] ''m'', [[kartofel]] ''m'', [[pyra]] ''f''
 *Portuguese: [[batata]], [[batatinha]]
 *Russian: [[картофель]], ''m''
-*{{sk}}: [[zemiaky]]
+*Slovak: [[zemiaky]]
 *Spanish: [[patata]] ''f'', [[papa]] ''f'' (Mexico)
 *Swedish: [[potatis]]
 *[[Tibetan]]: [[ཞོ་ཁོག་]] (zho khog)
 *Urdu: [[آلو]]
 |}
 |}
-
-[[Category:Quechuan derivations]]
 
 [[fr:potato]]
 [[nl:potato]]
