/* Spanish */  pope not proper. <papa#37501>

--- a/wiki/papa.wikitext
+++ b/wiki/papa.wikitext
@@ -74,14 +74,13 @@ Latin ''papa'' from Greek ''páppas''
 '''papa''' ''f''
 #[[potato]] (Mexico)
 
+'''papa''' ''m''
+#[[pope]]
+
 ====Synonyms====
 *[[patata]] ''f'' (Spain)
 
 ====Related terms====
 *[[papas fritas]]
-
-===Proper Noun===<!-- no longer sure about the capitalisation or proper noun status -->
-'''Papa''' ''m''
-#[[Pope]]
-
+*[[papá]]
 [[pt:papa]]
