--- a/wiki/dork.wikitext
+++ b/wiki/dork.wikitext
@@ -3,6 +3,7 @@
 '''dork''' (''plural'' '''dorks''')
 
 #(''US, derogatory slang'') A quirky, silly and/or stupid person, or one who is out of touch with contemporary trends.
+#(''vulgar slang'') A penis.
 #(''In biological terms'') A whale penis.
 
 ====See also====<!-- some may be synonyms -->
