--- a/wiki/sugartime.wikitext
+++ b/wiki/sugartime.wikitext
@@ -13,7 +13,7 @@
 #: ''Your girlfriend is '''sugartime'''!''
 
 ===Etymology===
-A term first coined by the popular bonnes vivantes the Brewnettes, it derives from the episode title of a children's television program. The episode was not aired by the Public Broadcasting Service following pressure from the [[George W. Bush|Bush Administration]]. 
+A term first coined by the popular bonnes vivantes the Brewnettes, it derives from the episode title of a children's television program. The episode was not aired by the Public Broadcasting Service following pressure from the Bush Administration. 
 
 In January 2005 Secretary of Education Margaret Spellings wrote an open letter to PBS, complaining about an upcoming episode of the children's show ''Postcards from Buster.'' The show, which receives money from the Education Department, combines animation with live action, and in each episode the animated bunny Buster and his father visit real families all over the country. Buster has met Mormons in Utah, Hmong in Wisconsin, Pentecostal Christians, Muslims, and Orthodox Jews.
 
