--- a/wiki/cancer.wikitext
+++ b/wiki/cancer.wikitext
@@ -13,12 +13,12 @@
 
 ====Translations====
 *Chinese: [[癌症]]
-*{{fi}}: [[syöpä]] (1)
+*Finnish: [[syöpä]] (1)
 *Hebrew: [[סרטן|סַרְטַן]] m
 *Italian: [[cnacro]] ''m''
 *Japanese: [[癌]]
 *[[Polish]]: [[rak]] ''m''
-*{{es}}: [[cáncer]] ''m''
+*Spanish: [[cáncer]] ''m''
 
 ====See also====
 *[[leukaemia]], [[leukemia]]
@@ -39,7 +39,7 @@
 *Italian: [[Cancro]]
 *Japanese: [[蟹座]], [[巨蟹宮]]
 *[[Polish]]: Rak ''m''
-*{{es}}: [[cáncer]] ''m''
+*Spanish: [[cáncer]] ''m''
 ----
 
 ==Latin==
@@ -51,8 +51,3 @@
 '''cancer''' ''m'' (Plural: [[cancri]])
 
 #a [[crab]]
-
-====Translations====
-*Danish: [[krebsen]] ''c''
-*Estonian: [[vähk]]
-*German: [[Krebs]] ''m''
