--- a/wiki/Jamaica.wikitext
+++ b/wiki/Jamaica.wikitext
@@ -40,6 +40,12 @@
 *[[Wiktionary Appendix:Countries of the world]]
 *[[w:Jamaica|Wikipedia article on Jamaica]]
 [[Category:Countries]]
-
+----
+== Spanish == 
+=== Noun === 
+'''jamaica''' ''f'' 
+# [[hibiscus]] 
+[[Category:Spanish nouns]]
+[[Category:Es:Plants]]
 [[hi:Jamaica]]
 [[hu:Jamaica]]
