--- a/wiki/playground.wikitext
+++ b/wiki/playground.wikitext
@@ -6,8 +6,9 @@
 #''(urban):'' Small area for children with dedicated play equipment - slide, or tubes, or swings, etc.
 
 ====Translations====
-*French: [[cour]] [[de]] [[r&eacute;cr&eacute;ation]]
-*{{hu}}: [[játszótér]] [[:hu:játszótér|játszótér]]
-*{{sv}}: [[lekplats]]
+*{{dk}}: [[legeplads]]
+*{{fr}}: [[cour]] [[de]] [[r&eacute;cr&eacute;ation]]
 *{{de}}: [[Spielplatz]]
+*{{hu}}: [[játszótér]] [[:hu:játszótér|játszótér]]
 *{{it}}: [[campo giochi]]
+*{{sv}}: [[lekplats]]
