--- a/wiki/Hungary.wikitext
+++ b/wiki/Hungary.wikitext
@@ -2,7 +2,7 @@
 ===Proper noun===
 '''Hungary'''
 
-# Country in Europe. Official name: Republic of Hungary (Magyar Köztársaság)
+# Country in Europe. Official name: [[Republic]] of Hungary (Magyar Köztársaság)
 
 ====Related terms====
 *[[Hungarian]]
