robot  Adding:fr,pl <sea#24568>

--- a/wiki/sea.wikitext
+++ b/wiki/sea.wikitext
@@ -88,7 +88,10 @@ From Middle English '''see''' < Old English '''[[sæ]]''' (sea, lake) < Proto-Ge
 # ''first-person singular present subjunctive of [[ser]]'': '''that I be.'''
 # ''third-person singular present subjunctive of [[ser]]'': '''that he/she/it be.'''
 
+[[Category:1000 English basic words]]
+
+[[fr:sea]]
 [[it:sea]]
 [[nl:sea]]
+[[pl:Sea]]
 [[fi:Sea]]
-[[Category:1000 English basic words]]
