robot  Adding:nl <engagement#94039>

--- a/wiki/engagement.wikitext
+++ b/wiki/engagement.wikitext
@@ -7,3 +7,5 @@
 #:''Check the gears for full '''engagement''' before turning the handle.''
 #(countable or uncountable) the period of time when [[marriage]] is [[planned]] or [[promised]]
 #:''We are enjoying a long '''engagement''', but haven't yet set a date.''
+
+[[nl:engagement]]
