--- a/wiki/English.wikitext
+++ b/wiki/English.wikitext
@@ -241,5 +241,10 @@ From Old English '''[[Englisc]]''', from '''[[Engle]]''' ("the [[Angles]]," a Ge
 [[gu:English]]
 [[hi:English]]
 [[it:English]]
+[[hu:English]]
 [[nl:English]]
 [[ja:English]]
+[[pt:English]]
+[[simple:English]]
+[[fi:English]]
+[[sv:English]]
