--- a/wiki/pita.wikitext
+++ b/wiki/pita.wikitext
@@ -2,7 +2,10 @@
 ===Noun===
 '''pita'''
 
-#A type of bread pouch used for making a [[gyro]].  Delicious with just [[humus]].
+#A type of bread pouch used for making a [[gyro]].  Delicious with just [[houmous]].
+===Alternative spellings===
+*[[pita bread]]
+*[[pitta bread]]
 
 ==={{acronym}}===
 '''PITA'''
