see also <astronomer#99893>

--- a/wiki/astronomer.wikitext
+++ b/wiki/astronomer.wikitext
@@ -7,3 +7,7 @@
 '''astronomer''', plural '''astronomers'''
 {{wikipedia}}
 #One who studies [[astronomy]], the [[star]]s or the [[physical]] [[universe]]; a [[scientist]] whose area of research is astronomy or [[astrophysics]]
+===Related terms===
+*[[astronomer royal]]
+===See also===
+*[[cosmologist]]
