/* Related terms */ <astronomer#99893>

--- a/wiki/astronomer.wikitext
+++ b/wiki/astronomer.wikitext
@@ -8,6 +8,7 @@
 {{wikipedia}}
 #One who studies [[astronomy]], the [[star]]s or the [[physical]] [[universe]]; a [[scientist]] whose area of research is astronomy or [[astrophysics]]
 ===Related terms===
-*[[astronomer royal]]
+*[[Astronomer Royal]]
+
 ===See also===
 *[[cosmologist]]
