robot  Adding:nl <enteritis#56813>

--- a/wiki/enteritis.wikitext
+++ b/wiki/enteritis.wikitext
@@ -5,3 +5,4 @@ From the Greek ''enteron'' and the suffix, [[itis]].
 An inflamation of the intestines, generally the small intestines.
 
 [[gl:Enteritis]]
+[[nl:enteritis]]
