--- a/wiki/Engeland.wikitext
+++ b/wiki/Engeland.wikitext
@@ -1,3 +1,8 @@
-Engeland is the Dutch word for England
+==Dutch==
+===Proper noun===
+'''Engeland'''
+# [[England]]
+
+[[Category:Dutch proper nouns]]
 
 [[nl:Engeland]]
