fix link <meze#99894>

--- a/wiki/meze.wikitext
+++ b/wiki/meze.wikitext
@@ -3,7 +3,7 @@
 {{Gr.}}
 ===Noun===
 '''meze'''  (plural ''mezes'')
-#(''in plural'') small [[portion]]s of [[Greek]] [[starter]]s or [[Hors D'oeuvre]]s (equivalent to [[Spanish]] [[tapas]]) often served as a light [[meal]] with [[pitta bread]]
+#(''in plural'') small [[portion]]s of [[Greek]] [[starter]]s or [[Hors d'oeuvre]]s (equivalent to [[Spanish]] [[tapas]]) often served as a light [[meal]] with [[pitta bread]]
 ===See also===
 *[[taramosalata]]
 *[[houmous]]
