--- a/wiki/lower_Ivy.wikitext
+++ b/wiki/lower_Ivy.wikitext
@@ -1,1 +1,1 @@
-The term "lower ivies" refers to [[Columbia]], [[Dartmouth]], [[Brown]], [[Cornell]], and the [[University of Pennsylvania]]. It describes a group of ivy league universities that are generally seen as less prestigious than Harvard, Yale, Stanford, and Princeton.
+The term "lower ivies" refers to [[Columbia]], [[Dartmouth]], [[Brown]], [[Cornell]], and the [[University of Pennsylvania]]. It describes a group of ivy league universities that are generally seen as less prestigious than [[Harvard]], [[Yale]], [[Stanford]], and [[Princeton]].
