--- a/wiki/accouchement.wikitext
+++ b/wiki/accouchement.wikitext
@@ -1,4 +1,11 @@
+==English==
 ===Etymology===
 French, from ''[[accoucher]]'' to be delivered of a child, to aid in delivery, Old French ''[[acouchier]]'' originally to lay down, put to bed, go to bed; Latin ''[[ad]]'' + ''[[collocare]]'' to lay, put, place. See [[collate]]
+
+===Pronunciation===
+{{AHD|ä′ksh-mäɴ}}
+
 ===Noun===
-#Delivery in childbed
+#Delivery in [[childbed]]; [[childbearing]]
+#: ''"Custom required that the [[royal]] family and the whole Court should be present at the
+[[accouchement]] of the Princesses."''
