--- a/wiki/accouchement.wikitext
+++ b/wiki/accouchement.wikitext
@@ -6,6 +6,10 @@ French, from ''[[accoucher]]'' to be delivered of a child, to aid in delivery, O
 {{AHD|ä′ksh-mäɴ}}
 
 ===Noun===
-#Delivery in [[childbed]]; [[childbearing]]
-#: ''"Custom required that the [[royal]] family and the whole Court should be present at the
-[[accouchement]] of the Princesses."''
+#Delivery in [[childbed]
+#: ''"Custom required that the [[royal]] family and the whole Court should be present at the [[accouchement]] of the Princesses."''
+
+====Related terms====
+*[[childbearing]]
+*[[childbirth]]
+*[[vaginal birth]]
