--- a/wiki/accouchement.wikitext
+++ b/wiki/accouchement.wikitext
@@ -6,7 +6,7 @@ French, from ''[[accoucher]]'' to be delivered of a child, to aid in delivery, O
 {{AHD|ä′ksh-mäɴ}}
 
 ===Noun===
-#Delivery in [[childbed]
+#Delivery in [[childbed]]
 #: ''"Custom required that the [[royal]] family and the whole Court should be present at the [[accouchement]] of the Princesses."''
 
 ====Related terms====
