--- a/wiki/hooray.wikitext
+++ b/wiki/hooray.wikitext
@@ -1,9 +1,6 @@
 ==English==
-
+===Etymology===
+First attested circa [[w:17th century|17th century]], alteration of [[huzzah]].
 ===Exclamation===
-'''hooray'''
-#Variant of [[hurrah]].
+'''hooray''' ''or'' '''hurray''' ''or'' '''hurrah'''
 #Used to express joy or approval.
-
-====Alternate spellings====
-*[[hurray]]
