--- a/wiki/hooray.wikitext
+++ b/wiki/hooray.wikitext
@@ -1,6 +1,12 @@
 ==English==
 ===Etymology===
 First attested circa [[w:17th century|17th century]], alteration of [[huzzah]].
-===Exclamation===
+
+===Interjection====
 '''hooray''' ''or'' '''hurray''' ''or'' '''hurrah'''
-#Used to express joy or approval.
+#Used to express [[approval]], [[joy]] or [[victory]].
+====Translation====
+*Russian: [[ура]]
+===Noun===
+#A shout to signify victory;
+#An exression of excitement
